--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "dependencies": {
     "gatsby": "^2.13.3",
     "gatsby-image": "^2.2.4",
+    "gatsby-plugin-google-analytics": "^2.1.1",
     "gatsby-plugin-manifest": "^2.2.1",
     "gatsby-plugin-offline": "^2.2.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sharp": "^2.2.2",
     "gatsby-source-filesystem": "^2.1.2",
+    "gatsby-transformer-remark": "^2.6.0",
     "gatsby-transformer-sharp": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
