--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "fs-extra": "^8.1.0",
     "get-port": "^5.0.0",
     "gh-pages": "^2.0.1",
+    "inquirer": "^6.4.1",
+    "inquirer-datepicker-prompt": "^0.4.2",
     "prettier": "^1.18.2",
     "promise.series": "^0.2.0",
     "puppeteer": "^1.18.1",
@@ -41,6 +43,7 @@
   ],
   "license": "MIT",
   "scripts": {
+    "new": "node new",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx} *.{js,jsx}",
