--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "axios": "^0.19.0",
     "gatsby": "^2.13.3",
     "gatsby-cli": "^2.7.8",
     "gatsby-image": "^2.2.4",
@@ -21,10 +22,12 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "oembed-parser": "^1.2.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-modal": "^3.8.2",
     "rehype-react": "^3.1.0"
   },
   "devDependencies": {
