--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "serve": "gatsby serve",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "output": "npm run build && node output",
+    "output-all": "npm run build && node output --all",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "repository": {
